# Prog3-Trabalho2

./: CMakeLists.txt
src/Eleicoes/: Eleicao.cpp  Eleicao.h  candidato.cpp  candidato.h  comparaCandidato.h  comparaMaisVotado.h  comparaPartido.h  partido.cpp  partido.h
src/Entrada/: Leitor.cpp  Leitor.h
src/Saida/: Estatisticas.cpp  Estatisticas.h
src/Testador/: main.cpp
